# Test-Time-Compute-For-Reasoning-Models

./: .gitignore  PRM_model.py  Qwen-zeroShot.py  README.md  generate_PRM_data.py  plots.ipynb  pyproject.toml  sweep_PRM.sh  train_PRM.py
logs/benchmark/7B/: results_rollouts16_beamM4.json  results_rollouts8_beamM4.json
logs/sweep/: lr_1e-4_grad_accum_16.json  lr_1e-4_grad_accum_32.json  lr_1e-4_grad_accum_8.json  lr_1e-5_grad_accum_16.json  lr_1e-5_grad_accum_32.json  lr_1e-5_grad_accum_8.json  lr_5e-5_grad_accum_16.json  lr_5e-5_grad_accum_32.json  lr_5e-5_grad_accum_8.json
prompts/: CoT.prompt  CoT_no_chat.prompt
