[project]
name = "test-time-compute-for-reasoning-fine-tuned-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "pylatexenc>=2.10",
    "sympy>=1.14.0",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "vllm>=0.18.0",
    "wandb>=0.26.0",
]
